[mantine.dev] Fix tooltip overflow in mdx npm script

--- a/apps/mantine.dev/src/components/MdxProvider/MdxNpmScript/MdxNpmScript.module.css
+++ b/apps/mantine.dev/src/components/MdxProvider/MdxNpmScript/MdxNpmScript.module.css
@@ -24,9 +24,10 @@
 
 .code {
   margin-top: 0;
-  background-color: light-dark(var(--mantine-color-gray-1), var(--mantine-color-dark-8));
+  overflow: visible;
 
-  &[data-without-radius] {
+  & code {
+    border-radius: var(--mantine-radius-md);
     border-start-start-radius: 0;
   }
 }
